# dispatcher

./: .gitignore  Cargo.toml  README.md
assets/: .$dispatcher.drawio.bkp  dispatcher.drawio
examples/: basic.rs  food_delivery.rs  ride_hailing.rs
src/: drivers.rs  engine.rs  lib.rs  location.rs  main.rs  orders.rs  rules.rs  server.rs  strategies.rs
tests/: integration.rs
web/: app.js  index.html  styles.css
